--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,25 @@ body {
     background-color: #FFFFFF;
 }
 
-.maincontainer{
+.maincontainer { 
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+ul {
+    padding-left: 0;
+    margin: 0;
+}
+
+p {
+    padding-left: 0;
+    margin: 0;
+}
+
+h3 {
+    padding-left: 0;
+        margin: 0;
 }
 
 main {
@@ -51,12 +66,19 @@ main {
 .nav-menu {
     display: flex;
     gap:40px;
+    margin-left: 4.75em
+}
+
+.features-section .container ul {
+    display: flex;
+    gap: 24px;
 }
 
 .features-section .container li {
-    display: flex;
     flex-basis: calc((1128px-72px)/4);
 }
+
+
 
 .logospan {
     color: #2e2f42;
@@ -131,6 +153,7 @@ li {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .third-h {
@@ -138,6 +161,7 @@ li {
     font-size: 20px;
     color: #2E2F42 ;
     letter-spacing: 0.02em;
+    margin-bottom: 8px ;
 }
 
 .paragraph {
@@ -172,12 +196,36 @@ main {
     letter-spacing: 0.02em;
 }
 
-.team {
+.team  {
     background-color: #F4F4FD;
 }
 
 .teamlist {
     background-color: #FFFFFF;
+    box-shadow: 0 2px 4px #2E2F42;
+}
+
+.team .container ul {
+    display: flex;
+    gap: 24px;
+}
+
+.team .container li {
+    flex-basis: calc((1128px-72px)/4);
+}
+
+.portfolio ul {
+    flex-basis: calc((1128px-72px)/6);
+}
+
+.section-portfolio .container ul {
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+}
+
+.portfolio{
+    box-shadow: 0 2px 4px #2E2F42;
 }
 
 .footer {
@@ -193,4 +241,38 @@ main {
 
 .contacts:hover, .contacts:focus {
     color: #404bbf;
+}
+
+.third-h-team {
+    font-weight: 500;
+    font-size: 20px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-top: 32px;
+}
+
+.paragraph-team {
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+
+.third-h-portfolio {
+    font-weight: 500;
+    font-size: 20px;
+    color: #2E2F42;
+    letter-spacing: 0.02em;
+    margin-top: 32px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.paragraph-portfolio {
+    letter-spacing: 0.02em;
+    margin-top: 8px;
+    margin-bottom: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
