--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,7 @@ main {
 
 .container {
     max-width: 1158px ;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0 15px;
     margin-left: auto ;
     margin-right: auto ;
 }
@@ -47,7 +46,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .visually-hidden {
@@ -66,7 +65,7 @@ main {
 .nav-menu {
     display: flex;
     gap:40px;
-    margin-left: 4.75em
+    padding: 24px 0;
 }
 
 .features-section .container ul {
@@ -75,7 +74,7 @@ main {
 }
 
 .features-section .container li {
-    flex-basis: calc((1128px-72px)/4);
+    flex-basis: calc((100%-72px)/4);
 }
 
 
@@ -96,7 +95,7 @@ main {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    
+    margin-right: 76px;
 }
 
 .nav-li {
@@ -139,6 +138,9 @@ li {
     padding: 16px 32px;
     border-radius: 4px;
     box-shadow: 0 2px 4px #2E2F42;
+    display: block;
+    min-width: 169px;
+    margin: auto;
 }
 
 .btn:hover, .btn:focus {
@@ -183,17 +185,18 @@ main {
 
 .section-title {
     background-color: #2E2F42;
-}
-
-.section-title {
     text-align: center;
+    padding: 188px 0;
 }
 
 .title {
+    max-width: 496px;
     color: white;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    margin: auto;
+    margin-bottom: 48px;
 }
 
 .team  {
@@ -212,20 +215,28 @@ main {
 
 .team .container li {
     flex-basis: calc((1128px-72px)/4);
+    border-radius: 0px 0px 4px 4px;
 }
 
-.portfolio ul {
-    flex-basis: calc((1128px-72px)/6);
+.card-container {
+    padding: 32px 0;
 }
 
+.card-container-p {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 .section-portfolio .container ul {
     display: flex;
     gap: 24px;
     flex-wrap: wrap;
+    row-gap: 48px;
 }
 
 .portfolio{
     box-shadow: 0 2px 4px #2E2F42;
+    border-radius: 0px 0px 4px 4px;
 }
 
 .footer {
@@ -250,14 +261,12 @@ main {
     color: #2E2F42;
     letter-spacing: 0.02em;
     text-align: center;
-    margin-top: 32px;
+    margin-bottom: 8px;
 }
 
 .paragraph-team {
     letter-spacing: 0.02em;
     text-align: center;
-    margin-top: 8px;
-    margin-bottom: 20px;
 }
 
 .third-h-portfolio {
@@ -265,19 +274,23 @@ main {
     font-size: 20px;
     color: #2E2F42;
     letter-spacing: 0.02em;
-    margin-top: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+    margin-bottom: 8px;
 }
 
 .paragraph-portfolio {
     letter-spacing: 0.02em;
-    margin-top: 8px;
-    margin-bottom: 20px;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
-.footer-container {
-    max-width:264px;
+.footer .container a {
+    display: inline-block;
+    margin-bottom: 16px;
 }
+
+.footer .container p {
+    max-width: 264px;
+}
+
+img {
+    display: block;
+}
+
