--- a/css/styles.css
+++ b/css/styles.css
@@ -42,11 +42,14 @@ main {
     align-items: center;
 }
 
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
 .page-header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #e7e9fc;
 }
 
 .visually-hidden {
@@ -76,8 +79,6 @@ main {
 .features-section .container li {
     flex-basis: calc((100%-72px)/4);
 }
-
-
 
 .logospan {
     color: #2e2f42;
