--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,6 @@ main {
 .nav-menu {
     display: flex;
     gap:40px;
-}
-
-.nav-menu li {
     padding: 24px 0;
 }
 
@@ -106,6 +103,7 @@ main {
     font-weight: 500;
     color: #2E2F42;
     letter-spacing: 0.02em; 
+    padding: 24px 0;
 }
 
 .nav-li:hover, .nav-li:focus{
