--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,6 @@ main {
 .nav-menu {
     display: flex;
     gap:40px;
-    padding: 24px 0;
 }
 
 .features-section .container ul {
@@ -103,6 +102,7 @@ main {
     font-weight: 500;
     color: #2E2F42;
     letter-spacing: 0.02em; 
+    display: block;
     padding: 24px 0;
 }
 
